# tmpl-mdbook-plugin

./: .releaserc.json  CODE_OF_CONDUCT.md  Cargo.toml  README.md  clippy.toml  justfile  rust-toolchain.toml  rustfmt.toml
.aim/todo/feat/mdbook-plugin/json-2-mdtable/: INDEX.md  TASKS.BACKLOG.md  TASKS.MVP.md  TASKS.md  scratch.md
.cargo/: config.toml
.github/templates/: book.mustache  config.mustache
.github/workflows/: audit.yml  ci.yml  gh-pages.yaml  mdbook.yaml  release.yml
docs/: book.toml
docs/src/: README.md  SUMMARY.md  configuration.md  data-flow.md  foo.md
docs/src/adr/: 001-design.md  README.md
src/: config.rs  error.rs  lib.rs  main.rs  preprocessor.rs  resolver.rs
tests/: integration.rs
tests/fixtures/test-book/: book.toml
tests/fixtures/test-book/src/: SUMMARY.md  chapter1.md  chapter2.md
